--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,11 +9,11 @@ on:
   schedule:
     - cron: '39 13 * * *'
   push:
-    branches: [ "main" ]
+    branches: [ "main", "dev", "qa" ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "dev", "qa" ]
 
 env:
   # Use docker.io for Docker Hub if empty
